Add some scripts for easier handling, expose Laravel dump server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -216,6 +216,9 @@ services:
     depends_on:
       - bind
 
+    ports:
+      # Expose Laravel dump server
+      - '9912:9912'
 
   # ------------------------------------------------------------
   # Web Server
